traversal.snake.Snake.scala.error
Compilation error:
Snake:15: error: type mismatch;
 found   : Unit
 required: Boolean
    gauche()
          ^Snake:12: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur){
  ^